--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -588,19 +588,19 @@ footer .footer-custom-content {
   margin: 0.3125rem;
 }
 
-#full-tags-list {
+.full-tags-list {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#full-tags-list .tag-entry {
+.full-tags-list .tag-entry {
   margin: 0 0 0.9375rem 1.5625rem;
 }
 
-#full-tags-list .tag-entry a {
+.full-tags-list .tag-entry a {
   font-size: 1.25rem;
 }
 
-#full-tags-list .tag-entry .entry-date {
+.full-tags-list .tag-entry .entry-date {
   color: #808080;
   font-style: italic;
   font-size: 1rem;
