--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,7 @@ layout: page
           </center>
           
           <a id="support-promo-section" href="https://mhar-vell.github.io/portfolio/index.html" target="_blank">
-            <strong>Se você chegou até aqui é porque está interessando em conhecer um pouco mais sobre nossos projetos. Escolha o um abaixo e acompanhe semanalmente o que estamos fazendo.</strong><br/>
-            <br/>
+            <strong>Se você chegou até aqui é porque está interessado em conhecer um pouco mais sobre nossos projetos. Abaixo você tem um link para os posts de cada projeto.</strong><br/>
           </a>
           <a href="aboutme">
             <center>
@@ -38,11 +37,7 @@ layout: page
   <hr class="mark">
 </div>
 
-
-
 {{ content }}
-
-
 
 {% assign posts = paginator.posts | default: site.posts %}
 
@@ -161,4 +156,4 @@ layout: page
           {%- endfor -%}
       </div>
   {%- endfor -%}
-  </div>
+</div>
